...
                            onSearch(textSearch) },
                        onSearch = {
                            onSearch(textSearch)
                        },
                        expanded = expanded,
                        onExpandedChange = { expanded = false },
                        placeholder = { Text("Search") },
                        leadingIcon = {
                            if(!expanded)  Icon(Icons.Default.Search, contentDescription = "Search")
                            else Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Back") },
                    )
                },
                colors = SearchBarDefaults.colors(containerColor = Color.LightGray),
...
                        trailingContent ={
                            IconButton(onClick = {
                            resultItem?.let {
                                onFavorite(it) } }) {
                                Icon(
                                    rememberVectorPainter(image = Icons.Filled.Star),
                                    contentDescription = "Favorite",
                                    tint = {
                                        if (resultItem?.favorite == true)
                                            ColorBlueFavorite
                                        else
                                            Color.Gray
                                })
...
